helm/longhorn/extra/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.kalexlab.xyz`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: authelia-forward-auth
          namespace: sso
  tls:
    secretName: longhorn-ingress-certificate-secret
